# uppexo

./: .exrc  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ak-47.mtl  graphicPipeline.cpp  imgui.ini  offscreen_rendering  phong_lighting
demo/: main.cpp
demo/shader/: computeShader.comp  shader.vert
include/: component.hpp  uppexo.hpp
include/base/: buffer.hpp  commandbuffer.hpp  computePipeline.hpp  descriptor.hpp  device.hpp  framebuffer.hpp  graphicPipeline.hpp  image.hpp  instance.hpp  renderpass.hpp  sampler.hpp  shader.hpp  synchronizer.hpp
include/core/: commandBufferRecorder.hpp  component.hpp  datatype.hpp  gui.hpp  mesh.hpp  present.hpp  renderdocCapture.hpp  sequence.hpp
include/core/command/: compute.hpp  general.hpp  render.hpp  transfer.hpp
include/engine/: compute.hpp  deferred.hpp  engine.hpp  forward.hpp
include/utils/: device_util.hpp  log.hpp  vulkan_util.hpp
shaders/: computeShader.comp  computeShader.spv  deferredFragment.frag  forwardVertexShader.spv  forwardVertexShader.vert  mrtFragment.frag  mrtVertex.vert  offscreenFragmentShader.frag  offscreenVertexShader.vert
src/base/: buffer.cpp  commandbuffer.cpp  computePipeline.cpp  descriptor.cpp  device.cpp  framebuffer.cpp  graphicPipeline.cpp  image.cpp  instance.cpp  renderpass.cpp  sampler.cpp  synchronizer.cpp
src/core/: commandBufferRecorder.cpp  datatype.cpp  gui.cpp  mesh.cpp  present.cpp  sequence.cpp
src/core/mesh/: mesh_fullvertex_mvp.cpp  mesh_fullvertex_norm_mvp.cpp  mesh_phongvertex_norm_mvp.cpp
src/engine/: compute.cpp  deferred.cpp  engine.cpp  forward.cpp
src/utils/: device_util.cpp  log.cpp  vulkan_util.cpp
tests/: compute_array.cpp  deffered_render.cpp  forward_rendering.cpp  offscreen_rendering.cpp  phong_lighting.cpp
